2009-03-09  Richard Hult  <richard@imendio.com>

	* Merge revision 2764 from upstream, further optimizations to the
	markup backend.

2009-03-09  Richard Hult  <richard@imendio.com>

	* Merge revision 2763 from upstream, to optimize the markup
	backend.

2009-02-06  Richard Hult  <richard@imendio.com>

	* backends/markup-tree.c (save_tree_with_locale): Also fflush()
	the stream before syncing.

2008-12-03  Richard Hult  <richard@imendio.com>

	* backends/markup-tree.c (save_tree_with_locale): Use fdatasync to
	flush the file before renaming.

2008-09-11  Richard Hult  <richard@imendio.com>

	* Release 2.16.0 of the dbus version.

2008-09-11  Richard Hult  <richard@imendio.com>

	* gconf/Makefile.am (DISTCLEANFILES): Add generated dbus service
	file.

2008-05-15  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database-dbus.c (gconf_database_notify_listeners):
	Get rid of critical warning (and crash when built with
	--disable-debug), when unsetting a key that has no writable
	sources.

2008-05-09  Richard Hult  <richard@imendio.com>

	* gconf/gconf-client.c: (gconf_client_flush_notifies): If the key
	is not in the cache, check if it's being monitored. Fixes issue
	where notifications were sent out for the first change after
	unsetting a key (for example).

2008-03-31  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database.c (gconf_database_notify_listeners): Get
	rid of critical warning (and crash when built with
	--disable-debug), when unsetting a key that has no writable
	sources.

2008-03-05  Richard Hult  <richard@imendio.com>

	* gconf/gconf-client.c (remove_key_from_cache_recursively_foreach):
	Fix crash, not sure why a null entry can be in the cache though so
	this is more of a workaround.

2008-02-07  Richard Hult  <richard@imendio.com>

	* backends/Makefile.am: Patch from Ross Burton to fix build with
	--as-needed.

2008-01-28  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus.c: Patch from Ross Burton to use right the